# Fast-and-exact-motif-discovery-using-the-SeqAn-library-GenMap-algorithm

./: README.md  demo.txt  test_commit.txt
create_datasets/datasets/: parameters_17_4.csv
create_datasets/src/: CMakeLists.txt  __CMakeLists.txt  createdatasets.cpp
datasets/10-2/: parameters_10_2.csv  syn_planted_motif_10_2_3.csv  syn_planted_motif_10_2_6.csv  syn_synthetic_data_10_2_10.fasta  syn_synthetic_data_10_2_2.fasta  syn_synthetic_data_10_2_4.fasta  syn_synthetic_data_10_2_7.fasta
datasets/11-2/: syn_planted_motif_11_2_10.csv  syn_planted_motif_11_2_3.csv  syn_synthetic_data_11_2_5.fasta
datasets/12-3/: syn_planted_motif_12_3_10.csv  syn_planted_motif_12_3_3.csv  syn_synthetic_data_12_3_2.fasta  syn_synthetic_data_12_3_4.fasta  syn_synthetic_data_12_3_7.fasta
datasets/13-3/: syn_planted_motif_13_3_5.csv  syn_synthetic_data_13_3_1.fasta  syn_synthetic_data_13_3_4.fasta  syn_synthetic_data_13_3_6.fasta  syn_synthetic_data_13_3_8.fasta
datasets/14-4/: syn_planted_motif_14_4_2.csv  syn_planted_motif_14_4_4.csv  syn_planted_motif_14_4_9.csv  syn_synthetic_data_14_4_4.fasta  syn_synthetic_data_14_4_7.fasta  syn_synthetic_data_14_4_8.fasta
datasets/15-4/: syn_planted_motif_15_4_5.csv  syn_planted_motif_15_4_6.csv  syn_planted_motif_15_4_7.csv  syn_planted_motif_15_4_9.csv  (+2 more)
genmap-build/: CMakeCache.txt  CTestTestfile.cmake  install_manifest.txt
genmap_motiffinder/: demo.txt
meme_results/: meme10.txt  meme11.txt  meme12.txt  meme8-15.txt
motiffinder/src/: CMakeLists.txt  __CMakeLists.txt  motiffinder.cpp
src/: motiffinder.cpp
(+243 files in other folders)
